# GildedRose-Refactoring-Kata

./: .gitignore  GildedRoseRequirements.html  GildedRoseRequirements.md  GildedRoseRequirements_fr.html
C/: C.code-workspace  CMakeLists.txt  GildedRose.c  GildedRose.h
C/tests/: CMakeLists.txt  Common.cpp  Common.h  Fixture.cpp  GildedRoseUnitTests.AFirstTest.approved.txt  GildedRoseUnitTests.Aged_Brie.Aged_Brie_actually_increases_in_Quality_the_older_it_gets.approved.txt  GildedRoseUnitTests.BaseRules.At_the_end_of_each_day_our_system_lowers_both_values_for_every_item.approved.txt  GildedRoseUnitTests.BaseRules.The_product_looses_1_quality_per_day_until_it_reaches_the_sell_by_date.Once_the_sell_by_date_has_passed,_Quality_degrades_twice_as_fast.approved.txt  GildedRoseUnitTests.BaseRules.The_product_looses_1_quality_per_day_until_it_reaches_the_sell_by_date.approved.txt  GildedRoseUnitTests.Sulfuras.Sulfuras,_being_a_legendary_item,_never_has_to_be_sold_or_decreases_in_Quality.approved.txt  GildedRoseUnitTests.TestGildedRoseGroup.At_the_end_of_each_day_our_system_lowers_both_values_for_every_item.approved.txt  GildedRoseUnitTests.TestGildedRoseGroup.The_product_looses_1_quality_per_day_until_it_reaches_the_sell_by_date.Once_the_sell_by_date_has_passed,_Quality_degrades_twice_as_fast.approved.txt  GildedRoseUnitTests.TestGildedRoseGroup.The_product_looses_1_quality_per_day_until_it_reaches_the_sell_by_date.approved.txt  GildedRoseUnitTests.cc  fib.cpp
csharpcore.nunit/: GildedRose.sln  NoteCompleterTests.md  NotesRefactoring.md  Readme-nUnit.md  Readme.md  (+1 more)
(+38 files in other folders)
